dev/product.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: product
  name: product
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: product
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: product
  name: product
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      serviceAccountName: product
      containers:
        - image: tannguyenit/bsm-product-service:v4
          imagePullPolicy: IfNotPresent
          name: product
          resources:
            requests:
              cpu: 200m # The container requests 200 millicores (that is, 1/5 of a single CPU core’s time).
              memory: 10Mi # The container also requests 10 mebibytes of memory.
            limits:
              memory: "512Mi"
              cpu: 10Mi
          ports:
          - containerPort: 80
            name: http
            protocol: TCP
          securityContext:
            privileged: false
          readinessProbe:
            httpGet:
                path: /health
                port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
                path: /health
                port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
