dev/webapp.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webapp
  name: webapp
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: webapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapp
  name: webapp
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      serviceAccountName: webapp
      containers:
        - image: tannguyenit/bsm-app-service:v6
          imagePullPolicy: IfNotPresent
          name: webapp
          resources:
            requests:
              cpu: 200m # The container requests 200 millicores (that is, 1/5 of a single CPU core’s time).
              memory: 10Mi # The container also requests 10 mebibytes of memory.
            limits:
              memory: "512Mi"
              cpu: "1000m"
          ports:
          - containerPort: 80
            name: http
            protocol: TCP
          securityContext:
            privileged: false
          readinessProbe:
            httpGet:
                path: /health
                port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
                path: /health
                port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
